--- a/src/packages.config
+++ b/src/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="LibVLCSharp" version="3.4.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="VideoLAN.LibVLC.Windows" version="3.0.8.1" targetFramework="net472" />
 </packages>
