--- a/BGEngine/packages.config
+++ b/BGEngine/packages.config
@@ -8,4 +8,5 @@
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="Octokit" version="0.36.0" targetFramework="net472" />
   <package id="VideoLAN.LibVLC.Windows" version="3.0.8.1" targetFramework="net472" />
+  <package id="XamlAnimatedGif" version="1.2.2" targetFramework="net472" />
 </packages>
