--- a/BGEngine/packages.config
+++ b/BGEngine/packages.config
@@ -7,6 +7,7 @@
   <package id="LibVLCSharp" version="3.4.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="Octokit" version="0.36.0" targetFramework="net472" />
+  <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net472" />
   <package id="VideoLAN.LibVLC.Windows" version="3.0.8.1" targetFramework="net472" />
   <package id="XamlAnimatedGif" version="1.2.2" targetFramework="net472" />
 </packages>
